<resources>
    <string name="button_ok">ОК</string>
    <string name="button_yes">Да</string>
    <string name="button_no">Нет</string>
    <string name="button_cancel">Отмена</string>

    <string name="error">Ошибка</string>
    <string name="error_mandatory_field">Поле обязательно для заполнения</string>
    <string name="error_invalid_phone">Неверный формат телефона</string>

    <string name="main_navigation_profile">Профиль</string>
    <string name="main_navigation_inventory">Инвентарь</string>
    <string name="main_navigation_map">Карта</string>
    <string name="main_navigation_quests_list">Задания</string>
    <string name="main_navigation_library">Библиотека</string>

    <string name="sign_in_proceed_button">Войти</string>

    <string name="no_internet">Отсутствует интернет-соединение</string>
    <string name="check_internet">Проверьте подключение к интернету</string>
    <string name="something_went_wrong">Что-то пошло не так</string>

    <string name="unexpected_error">Непредвиденная ошибка</string>

    <!--character-->
    <string name="screen_characters_list_title">Список персонажей</string>
    <string name="screen_characters_list_create_character">Создать персонажа</string>
    <string name="screen_characters_list_remove_character_dialog_title">Удалить персонажа?</string>
    <string name="screen_characters_list_remove_character_dialog_message"></string>

    <string name="screen_create_character_title">Создание персонажа</string>
    <string name="screen_create_character_fraction_title">Фракция</string>
    <string name="screen_create_character_character_title">Персонаж</string>
    <string name="screen_create_character_icon_title">Портрет</string>
    <string name="screen_create_character_role_title">Класс</string>
    <string name="screen_create_character_about">Описание</string>
    <string name="screen_create_character_about_role_title">Описание класса</string>
    <string name="screen_create_character_about_stats_title">Характеристики</string>
    <string name="screen_create_character_apply_button">Создать</string>

    <string name="asset_race_human">Human</string>
    <string name="asset_race_human_description">asset_race_human_description</string>
    <string name="asset_race_enemy">Enemy</string>
    <string name="asset_race_enemy_description">asset_race_enemy_description</string>
    
    <string name="asset_character_1">Man</string>
    <string name="asset_character_1_description">Bigman</string>
    <string name="asset_character_2">Witch</string>
    <string name="asset_character_2_description">nyaaaa</string>
    <string name="asset_character_3">Blackman</string>
    <string name="asset_character_3_description">bgg</string>

    <string name="asset_gender_male">male</string>
    <string name="asset_gender_female">female</string>

    <string name="asset_role_knight">Knight</string>
    <string name="asset_role_knight_description">asset_role_knight_description</string>
    <string name="asset_role_priest">Priest</string>
    <string name="asset_role_priest_description">asset_role_priest_description</string>
    <string name="asset_role_demon_lord">Demon Lord</string>
    <string name="asset_role_demon_lord_description">asset_role_demon_lord_description</string>
    <string name="asset_role_demonologist">Demonologist</string>
    <string name="asset_role_demonologist_description">asset_role_demonologist_description</string>
    <string name="asset_role_necromancer">Necromancer</string>
    <string name="asset_role_necromancer_description">asset_role_necromancer_description</string>
    <string name="asset_role_witch">Witch</string>
    <string name="asset_role_witch_description">asset_role_witch_description</string>
    <string name="asset_role_ranger">Ranger</string>
    <string name="asset_role_ranger_description">asset_role_ranger_description</string>
    <string name="asset_role_druid">Druid</string>
    <string name="asset_role_druid_description">asset_role_druid_description</string>
    <string name="asset_role_barbarian">Barbarian</string>
    <string name="asset_role_barbarian_description">asset_role_barbarian_description</string>
    <string name="asset_role_beastmaster">Beast Master</string>
    <string name="asset_role_beastmaster_description">asset_role_beastmaster_description</string>
    <string name="asset_role_wizard">Wizard</string>
    <string name="asset_role_wizard_description">asset_role_wizard_description</string>
    <string name="asset_role_sorcerer">Sorcerer</string>
    <string name="asset_role_sorcerer_description">asset_role_sorcerer_description</string>

    <!--map-->
    <string name="screen_map_travels_title">Локации</string>
    <string name="screen_map_objects_title">Объекты</string>
    <string name="screen_map_npc_title">Персонажи</string>
    <string name="screen_map_monsters_title">Монстры</string>

    <string name="asset_map_mountain_label">mountain</string>
    <string name="asset_map_forest_label">forest</string>
    <string name="asset_map_hills_label">hills</string>
    <string name="asset_map_grassland_label">grassland</string>
    <string name="asset_map_swamp_label">swamp</string>
    <string name="asset_map_arctic_label">arctic</string>
    <string name="asset_map_aquatic_label">aquatic</string>
    <string name="asset_map_ship_label">ship</string>
    <string name="asset_map_coast_label">coast</string>
    <string name="asset_map_aloft_label">aloft</string>
    <string name="asset_map_desert_label">desert</string>
    <string name="asset_map_cavern_label">cavern</string>
    <string name="asset_map_inn_label">inn</string>
    <string name="asset_map_space_label">space</string>
    <string name="asset_map_temple_label">temple</string>
    <string name="asset_map_village_label">village</string>
    <string name="asset_map_town_label">town</string>
    <string name="asset_map_city_label">city</string>
    <string name="asset_map_castle_label">castle</string>
    <string name="asset_map_manor_label">manor</string>

    <string name="asset_map_01_label">map_01</string>
    <string name="asset_map_02_label">map_02</string>
    <string name="asset_map_03_label">map_03</string>
    <string name="asset_map_04_label">map_04</string>

    <!--library-->
    <string name="library_main_menu_characters">Персонаж</string>
    <string name="library_main_menu_items">Предметы</string>
    <string name="library_main_menu_locations">Локации</string>
    <string name="library_main_menu_monsters">Монстры</string>
</resources>